# libphone-ui-shr

./: .gitignore  AUTHORS  Makefile.am  TODO  configure.ac
data/: Makefile  Makefile.am  Makefile.in  calendar.edc  call.edc  call.edj  colors.edc  config.sample  contactlist.edc  contacts.edc  contacts.edj  default.edc  dialer.edc  dialog.edj  incoming-message.edj  keypad.edc  keypad.edj  messagelist.edc  messagelist.edj  messages.edc  messages.edj  phonelog.edc  quick-settings.edc  sim-auth.edc  sim-auth.edj  sim-manager.edc  styles.edc  ussd.edj
data/idle_screen/: Makefile.am  idle_screen.edc
data/widgets/: Makefile.am  widgets.edc
po/: POTFILES.in  ar.po  ca.po  cs.po  de.po  es.po  fi.po  gl.po  pl.po  ru.po  sv.po
src/: Makefile.am  phonegui-call.c  phonegui-contact.c  phonegui-contact.h  phonegui-contacts.c  phonegui-contacts.h  phonegui-dialer.c  phonegui-dialer.h  phonegui-dialog.c  phonegui-dialog.h  phonegui-incoming-message.c  phonegui-incoming-message.h  phonegui-init.c  phonegui-init.h  phonegui-messages.c  phonegui-messages.h  phonegui-sim-auth.c  phonegui-ussd.c  phonegui-ussd.h  phoneui-calendar.c  phoneui-calendar.h  phoneui-call.c  phoneui-call.h  phoneui-contacts.c  phoneui-contacts.h  phoneui-dialer.c  phoneui-dialer.h  phoneui-dialog.c  phoneui-dialog.h  phoneui-idle.c  phoneui-idle.h  phoneui-incoming-message.c  phoneui-incoming-message.h  phoneui-init.c  phoneui-init.h  phoneui-messages.c  phoneui-messages.h  phoneui-phone-log.c  phoneui-phone-log.h  phoneui-phonelog.c  (+10 more)
src/util/: Makefile.am  async.c  common-utils.c  common-utils.h  helper.c  helper.h  instance.c  pipe.c  ui-utils-contacts.c  ui-utils-contacts.h  ui-utils.c  ui-utils.h  ui_utils.c  ui_utils.h  window.c  window.h
src/view/: calendar-date-view.h  calendar-day-view.h  calendar-month-view.c  calendar-month-view.h  calendar-new-view.h  call-active-view.c  call-common.c  call-common.h  call-incoming-view.c  common-utils.c  common-utils.h  contact-delete-view.c  contact-edit-view.c  contact-list-common.c  contact-list-common.h  contact-list-view.c  contact-list-view.h  contact-show-view.c  contact-view.c  contact-view.h  dialer-view.c  dialer-view.h  dialog-view.c  idle-view.c  idle-view.h  loading-view.c  message-delete-view.c  message-folder-view.c  message-list-view.c  message-list-view.h  message-new-view.c  message-new-view.h  message-show-view.c  message-show-view.h  phone-log-view.c  phone-log-view.h  phonelog-view.c  phonelog-view.h  quick-settings-view.c  quick-settings-view.h  (+7 more)
src/widget/: elm_config.h  elm_config.h.in  elm_keypad.c  elm_keypad.h  elm_my_contactlist.c  etk_tree_model_edje.c
